@@ -7,6 +7,8 @@
 
 == Content ==
 * Add "sprintStarting" action
+* Add "blockStanding" activator
+* "particleGun" attack has configurable range
 
 ###############
 # Flier 0.5.0 #
